--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,6 +24,7 @@ jobs:
             odoo_version: "17.0"
             odoo_org_repo: "EMAS-Solutions/odoo"
             odoo_enterprise_repo: "EMAS-Solutions/enterprise"
+            github_pat: ${{ PAT }}
             image_name: py3.10-odoo17.0
 
     services:
@@ -59,8 +60,7 @@ jobs:
             odoo_version=${{ matrix.odoo_version }}
             odoo_org_repo=${{ matrix.odoo_org_repo }}
             odoo_enterprise_repo=${{ matrix.odoo_enterprise_repo }}
-          secrets: |
-            PAT=${{ secrets.PAT }}
+            github_pat=${{ matrix.github_pat }}
           tags: |
             ghcr.io/genisemas/oca-ci/${{ matrix.image_name }}:latest
           labels: |
@@ -85,8 +85,7 @@ jobs:
             odoo_version=${{ matrix.odoo_version }}
             odoo_org_repo=${{ matrix.odoo_org_repo }}
             odoo_enterprise_repo=${{ matrix.odoo_enterprise_repo }}
-          secrets: |
-            PAT=${{ secrets.PAT }}
+            github_pat=${{ matrix.github_pat }}
           tags: |
             ghcr.io/genisemas/oca-ci/${{ matrix.image_name }}:latest
           labels: |
