--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,7 +24,7 @@ jobs:
             odoo_version: "17.0"
             odoo_org_repo: "EMAS-Solutions/odoo"
             odoo_enterprise_repo: "EMAS-Solutions/enterprise"
-            github_pat: ${{ PAT }}
+            github_pat: ${{ secrets.PAT }}
             image_name: py3.10-odoo17.0
 
     services:
