--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,7 +62,7 @@ jobs:
           secrets: |
             github_pat=${{ secrets.PAT }}
           tags: |
-            ghcr.io/genisemas/oca-ci/${{ matrix.image_name }}:latest
+            ghcr.io/genisemas/gmc-e-ci/${{ matrix.image_name }}:latest
           labels: |
             org.opencontainers.image.source=${{ github.event.repository.html_url }}
           cache-from: type=registry,ref=ghcr.io/emas-solutions/emas-e-ci/${{ matrix.image_name }}:latest
@@ -72,7 +72,7 @@ jobs:
       - name: Run Tests
         run: |
           docker run --rm -v ${PWD}/tests:/mnt/tests --network=host -e PGHOST=localhost \
-            ghcr.io/emas-solutions/emas-e-ci/${{ matrix.image_name }}:latest \
+            ghcr.io/genisemas/gmc-e-ci/${{ matrix.image_name }}:latest \
             /mnt/tests/runtests.sh -v
         if: ${{ matrix.odoo_version != '8.0' && matrix.odoo_version != '9.0' }}
 
@@ -88,7 +88,7 @@ jobs:
           secrets: |
             github_pat=${{ secrets.PAT }}
           tags: |
-            ghcr.io/emas-solutions/emas-e-ci/${{ matrix.image_name }}:latest
+            ghcr.io/genismemas/gmc-e-ci/${{ matrix.image_name }}:latest
           labels: |
             org.opencontainers.image.source=${{ github.event.repository.html_url }}
           cache-from: type=local,src=/tmp/.buildx-cache
